--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.60'
+    ext.JUnit5_version = '1.0.30'
     repositories {
         google()
         jcenter()
@@ -9,7 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:$JUnit5_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
