--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".SignupActivity" android:label="@string/title_activity_settings"/>
 
         <activity android:name=".NewNote"/>
+        <activity android:name=".AudioRecorder"/>
 
     </application>
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
