--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="infrrd.ai.nevernote">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -21,10 +24,20 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".SignupActivity" android:label="@string/title_activity_settings"/>
-
-        <activity android:name=".NewNote"/>
-
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".NewNote" />
+        <activity
+            android:name=".MapViewActivity"
+            android:label="@string/title_activity_map_view"></activity>
     </application>
+
+    <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBo7RaLx5JZXDTxNhNyQ4C6yW41nvd4Ecw"/>
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
 </manifest>
