--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'jp.wasabeef:richeditor-android:1.2.2'
     implementation 'org.jsoup:jsoup:1.10.1'
     implementation 'com.haozhang.libary:android-animated-recording-view:1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+
     testImplementation("org.jetbrains.spek:spek-api:$spekVersion") {
         exclude group: "org.jetbrains.kotlin"
     }
