--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0-rc01'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.android.volley:volley:1.1.1'
 }
