--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,12 @@ dependencies {
     implementation 'jp.wasabeef:richeditor-android:1.2.2'
     implementation 'org.jsoup:jsoup:1.10.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.haozhang.libary:android-animated-recording-view:1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     testImplementation("org.jetbrains.spek:spek-api:$spekVersion") {
         exclude group: "org.jetbrains.kotlin"
